[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ASLM"
description = "Autonomous Softtware for Light Microscopy."
authors = [{name = "The Dean Lab, UT Southwestern Medical Center"}]
readme = "README.md"
license = {file = "LICENSE.md"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: TBD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

requires-python = ">=3.9.7"
dependencies = [
    'matplotlib-inline==0.1.3',
    'PyYAML==6.0',
    'pyserial==3.5',
    'PIPython==2.6.0.1',
    'nidaqmx==0.5.7',
    'tifffile==2021.11.2',
    'scipy==1.7.3',
    'pyusb==1.2.1',
    'pandas==1.3.5',
    'pandastable==0.12.2.post1',
    'opencv-python==4.5.5.62',
    'numpy==1.22.0; sys_platform != "darwin"',
    'numpy==1.21.6; sys_platform == "darwin"',
    'scikit-image==0.19.1',
    'zarr==2.14.2',
    'fsspec==2022.8.2; sys_platform != "darwin"',
    'fsspec==2022.5.0; sys_platform == "darwin"',
    'h5py==3.7.0',
    'requests==2.28.1'
    ]

[project.scripts]
aslm = "aslm.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ipykernel",
]
docs = [
    "numpydoc",
    "nbconvert",
    "sphinx<6.0.0",
    "sphinx-copybutton",
    "sphinx-issues",
    "sphinx-design",
    "pyyaml",
    "pydata_sphinx_theme==0.10.0rc2",
]

robot = [
    "mecademicpy",
]

[project.urls]
Source = "https://github.com/TheDeanLab/ASLM"
